type: feat body: Added a draft of converting the audio data to spectrogram image jpg files.

--- a/identify_instrument.ipynb
+++ b/identify_instrument.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Steps for Playing an Encoded Sound\n",
-    "- Load "
+    "# Steps for Training\n",
+    "- Extract all the samples and generate spectrogram jpegs for each\n",
+    "- Train a CNN on the jpegs\n",
+    "- "
    ]
   }
  ],
@@ -25,7 +27,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
