--- a/music_notes.ipynb
+++ b/music_notes.ipynb
@@ -2,15 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/home/ec2-user/anaconda3/envs/magenta-gpu/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0831 14:16:38.220207 140172280833856 deprecation.py:323] From <ipython-input-1-425267c26901>:9: tf_record_iterator (from tensorflow.python.lib.io.tf_record) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use eager execution and: \n",
+      "`tf.data.TFRecordDataset(path)`\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "RECORD  0 \n",
+      "\n",
+      "instrument_family\n",
+      "int64_list {\n",
+      "  value: 0\n",
+      "}\n",
+      "\n",
+      "note_str\n",
+      "bytes_list {\n",
+      "  value: \"bass_synthetic_033-100-100\"\n",
+      "}\n",
+      "\n",
+      "sample_rate\n",
+      "int64_list {\n",
+      "  value: 16000\n",
+      "}\n",
+      "\n",
+      "instrument_source\n",
+      "int64_list {\n",
+      "  value: 2\n",
+      "}\n",
       "\n",
       "qualities\n",
       "int64_list {\n",
@@ -67,26 +132,6 @@
       "int64_list {\n",
       "  value: 100\n",
       "}\n",
-      "\n",
-      "instrument_family\n",
-      "int64_list {\n",
-      "  value: 0\n",
-      "}\n",
-      "\n",
-      "note_str\n",
-      "bytes_list {\n",
-      "  value: \"bass_synthetic_033-100-100\"\n",
-      "}\n",
-      "\n",
-      "sample_rate\n",
-      "int64_list {\n",
-      "  value: 16000\n",
-      "}\n",
-      "\n",
-      "instrument_source\n",
-      "int64_list {\n",
-      "  value: 2\n",
-      "}\n",
       "\n"
      ]
     }
@@ -125,43 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import wave, sys, pyaudio\n",
-    "\n",
-    "def play_wav(wf):\n",
-    "    paud = pyaudio.PyAudio()\n",
-    "    chunk = 1024\n",
-    "    stream = paud.open(format = paud.get_format_from_width(wf.getsampwidth()),\n",
-    "                    channels = wf.getnchannels(),\n",
-    "                    rate = wf.getframerate(),\n",
-    "                    output = True)\n",
-    "    data = wf.readframes(chunk)\n",
-    "    while data != '':\n",
-    "        stream.write(data)\n",
-    "        data = wf.readframes(chunk)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#get number of records in test dataset\n",
-    "num_test_records = 0\n",
-    "ds_to_count = tf.data.TFRecordDataset('data/nsynth-test.tfrecord')\n",
-    "for r in ds_to_count:\n",
-    "    num_test_records += 1\n",
-    "    \n",
-    "print('num_test_records: ', num_test_records)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,111 +187,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/anaconda3/envs/magenta/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0819 11:06:11.936556 4500616640 deprecation_wrapper.py:119] From /anaconda3/envs/magenta/lib/python3.7/site-packages/magenta/pipelines/statistics.py:132: The name tf.logging.info is deprecated. Please use tf.compat.v1.logging.info instead.\n",
-      "\n",
-      "W0819 11:06:12.990061 4500616640 deprecation_wrapper.py:119] From /anaconda3/envs/magenta/lib/python3.7/site-packages/magenta/music/note_sequence_io.py:60: The name tf.python_io.TFRecordWriter is deprecated. Please use tf.io.TFRecordWriter instead.\n",
-      "\n",
-      "W0819 11:06:13.827184 4500616640 lazy_loader.py:50] \n",
-      "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
-      "For more information, please see:\n",
-      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
-      "  * https://github.com/tensorflow/addons\n",
-      "  * https://github.com/tensorflow/io (for I/O related ops)\n",
-      "If you depend on functionality not listed there, please file an issue.\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'num_test_records' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-e65be86d96f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mnum_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0mbatch_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuffer_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_test_records\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_samples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m         \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0mitr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_one_shot_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'num_test_records' is not defined"
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
    "source": [
-    "from io import BytesIO, StringIO\n",
-    "from scipy.io import wavfile\n",
+    "import warnings\n",
     "import tensorflow as tf\n",
-    "from utils import audio_utils\n",
-    "import math,array\n",
-    "from magenta.models.nsynth import utils\n",
+    "import math\n",
+    "#from magenta.models.nsynth import utils\n",
+    "#from magenta.models.nsynth.wavenet import fastgen\n",
+    "\n",
+    "from keras import layers\n",
+    "from keras import models\n",
+    "from keras.layers.advanced_activations import LeakyReLU\n",
+    "from keras.optimizers import Adam\n",
+    "import keras.backend as K\n",
+    "import librosa\n",
+    "import librosa.display\n",
+    "import pylab\n",
+    "import matplotlib.pyplot as plt\n",
+    "from utils import audio_utils, general_utils\n",
+    "from matplotlib import figure\n",
+    "import gc\n",
+    "from path import Path\n",
+    "\n",
     "import importlib\n",
     "\n",
-    "importlib.reload(audio_utils)\n",
-    "\n",
-    "with tf.Graph().as_default():\n",
-    "    with tf.Session() as sess:\n",
-    "        # Read data\n",
-    "        dataset = tf.data.TFRecordDataset('data/nsynth-test.tfrecord')\n",
-    "\n",
-    "        # make the tensor structure\n",
-    "        feats = {\n",
-    "            \"note_str\": tf.FixedLenFeature([], dtype=tf.string),\n",
-    "            \"audio\": tf.FixedLenFeature([64000], dtype=tf.float32)\n",
-    "        }\n",
-    "\n",
-    "        parse_func = lambda example_proto: tf.parse_single_example(example_proto, feats)\n",
-    "        dataset = dataset.map(parse_func)\n",
-    "\n",
-    "        num_samples = 50\n",
-    "        batch_size = 6\n",
-    "        dataset = dataset.shuffle(buffer_size=num_test_records).take(num_samples)\n",
-    "        dataset = dataset.batch(batch_size=batch_size)\n",
-    "        itr = dataset.make_one_shot_iterator()\n",
-    "        \n",
-    "        batch = itr.get_next()\n",
-    "        cnt = 0\n",
-    "        \n",
-    "        #loop through all batches\n",
-    "        for i in range(math.ceil(num_samples/batch_size)):\n",
-    "            ret = sess.run(batch)\n",
-    "            #print('iteration ', i)\n",
-    "            audio_utils.graph_wav(ret['audio'], ret['note_str'], cnt)\n",
-    "            #io = BytesIO(r)\n",
-    "            #print(io.read(10))\n",
-    "            #print(io)\n",
-    "            #rate, audio = wavfile.read(r)\n",
-    "            #play_wav(audio)\n",
-    "            #print(r)\n",
-    "            cnt += 1"
+    "warnings.filterwarnings('ignore')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processed 2450 files in 12 batches"
+     ]
+    }
+   ],
+   "source": [
+    "importlib.reload(audio_utils)\n",
+    "importlib.reload(general_utils)\n",
+    "\n",
+    "#audio_utils.write_spectograms('data/nsynth-test.tfrecord', 'data/nsynth-test-spectrograms')\n",
+    "audio_utils.write_spectograms_parallelized('data/nsynth-valid.tfrecord', 'data/nsynth-valid-spectrograms', 200)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of processors:  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import multiprocessing as mp\n",
+    "print(\"Number of processors: \", mp.cpu_count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -308,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
